--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -18,7 +18,7 @@ COPY ./bun.lock ./bun.lock
 COPY ./package.json ./package.json
 COPY ./turbo.json ./turbo.json
 
-COPY ./apps/frontend ./apps/frontend
+COPY ./apps/web ./apps/web
 
 # or 
 
@@ -34,7 +34,7 @@ RUN bun run generate:db
 # change this too 
 RUN DATABASE_URL=${DATABASE_URL} bun run build
 
-EXPOSE 8080
+EXPOSE 3000
 
 CMD ["bun", "start:backend"]
 
