--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "generate:db": "cd packages/db && bunx prisma generate",
     "start:backend": "cd apps/backend && bun run index.ts",
     "start:ws" : "cd apps/websocket && bun run index.ts",
-    "start:web" : "cd apps/web && bun run start"
+    "start:frontend" : "cd apps/web && bun run start"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
